--- a/src/scss/core.scss
+++ b/src/scss/core.scss
@@ -33,4 +33,8 @@
   a:hover {
     text-shadow: none;
   }
+
+  .resizable {
+    overflow: auto;
+  }
 }
